added time parsing